--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -15,14 +15,29 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+
+    - name: Cache node modules
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Install dependencies
+      run: npm install
+
     - name: Build
-      run: |
-        npm install
-        npx webpack
+      run: npm run build
+
+    - name: Publish artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: built-files
+        path: dist
