--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -34,7 +34,7 @@ jobs:
       run: npm install
 
     - name: Build
-      run: next build
+      run: npx next build
 
     - name: Publish artifact
       uses: actions/upload-artifact@v2
